--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>profile</h1>
        <p>名前：齋藤眞一郎</p>
        <p>ニックネーム：しんいち、しんちゃん</p>
-       <img src="C:\Users\konoh\Downloads\IMG_1879.jpeg" class="picture">
+       <img src="https://github.com/shinichi0530/shinichi0530.github.io/blob/main/IMG_1879.jpg?raw=true" class="picture">
        <p>学科：文学部心理学科</p>
        <p>サークル：軽音楽部🎸でベースを弾いてます！
        ベースについて<a href="C:\Users\konoh\Desktop\html_lesson\bass\bass.html">こちらのページ</a>で簡単に紹介しました！</p>
