--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <img src="https://github.com/shinichi0530/shinichi0530.github.io/blob/main/IMG_1879.jpg?raw=true" class="picture">
        <p>学科：文学部心理学科</p>
        <p>サークル：軽音楽部🎸でベースを弾いてます！
-       ベースについて<a href="C:\Users\konoh\Desktop\html_lesson\bass\bass.html">こちらのページ</a>で簡単に紹介しました！</p>
+       ベースについて<a href="https://shinichi0530.github.io/bass.html">こちらのページ</a>で簡単に紹介しました！</p>
        <p>趣味：読書、ライブに行くこと、アニメや映画鑑賞</p>   
     </div>
     <div class="contents2">
