--- a/bass.html
+++ b/bass.html
@@ -34,7 +34,7 @@
       <h2>アンノウンマザーグース/熊吉郎</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/4CCV-8fYn44?si=skIBkVF6_n1S1vfP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
       <p>これを聴いたらベースを好きになるかも！という動画を選びました！ぜひ聴いてみてください！</p>
-      <a href="C:\Users\konoh\Desktop\html_lesson\index.html">元のページに戻る</a>
+      <a href="https://shinichi0530.github.io/">元のページに戻る</a>
      </div>
   </div>
   </body>
